setup-scripts/61-hedgedoc/hedgedoc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hedgedoc-ingress
  namespace: hedgedoc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: hedgedoc
spec:
  ingressClassName: nginx
  tls:
    - secretName: hedgedoc-ssl
      hosts:
      - hedgedoc.vps-2.cluster-4.de          
  rules:
  - host: "hedgedoc.vps-2.cluster-4.de"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: hedgedoc
              port:
                number: 80
